# lib/db/src/schema/index.ts
@@ -2,3 +2,4 @@ export * from "./grades";
 export * from "./subjects";
 export * from "./papers";
 export * from "./questions";
+export * from "./attempts";
